--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+
                 </configuration>
             </plugin>
             <plugin>
@@ -67,13 +68,14 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>org.tts.ttsdeckgen/org.tts.ttsdeckgen.HelloApplication</mainClass>
+                            <mainClass>org.tts.ttsdeckgen.HelloApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
+
                         </configuration>
                     </execution>
                 </executions>
